apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:nightly
          # TODO: the intel-device-plugin currently fails to start, which makes
          # the jellyfin deployment fail because the GPU is not detected in the
          # node.
          # resources:
          #   limits:
          #     gpu.intel.com/i915: "1"
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: media
              mountPath: "/media"
            - name: config
              mountPath: "/config"
      volumes:
        - name: media
          hostPath:
            path: /home/padawan/media
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
